done the last three sectionon the homepage.

--- a/app/globals.css
+++ b/app/globals.css
@@ -204,6 +204,10 @@ body {
     @apply text-[12px] font-medium leading-[20px];
   }
 
+  .p-regular-12 {
+    @apply text-[12px] font-normal leading-[16px];
+  }
+
   /* SHADCN OVERRIDES */
   .select-field {
     @apply w-full bg-grey-50 h-[54px] placeholder:text-grey-500 rounded-md p-regular-16 px-5 py-3 border-none focus-visible:ring-transparent focus:ring-transparent !important;
